--- a/connexion.css
+++ b/connexion.css
@@ -11,7 +11,7 @@ body{
     color: #000000b8;
     font-family: "script";
     font-size: 12px;
-    margin-left: -52PX;
+    margin-left: -107PX;
     text-align: center;
     text-transform: uppercase;
 }
@@ -23,7 +23,6 @@ body{
     text-align: center;
     text-transform: uppercase;
 }
-
 .button input{
     border: none;
     padding: 2.5px;
@@ -34,4 +33,15 @@ body{
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+}
+.button1 input{    border: none;
+    padding: 2.5px;
+    color: rgb(0, 0, 0);
+    background: linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);
+    font-family: "script";
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-left: -3px;
 }
