--- a/inscription.css
+++ b/inscription.css
@@ -7,6 +7,13 @@ body{
     margin-top: 240px;
     text-transform: uppercase;
 }
+.mail{
+    color: #000000b8;
+    font-family: "script";
+    font-size: 12px;
+    margin-left: -45PX;
+    text-align: center;
+    text-transform: uppercase;}
 .pseudo{
     color: #000000b8;
     font-family: "script";
