--- a/gestion.css
+++ b/gestion.css
@@ -1,19 +1,36 @@
 body{
-    background: linear-gradient(rgba(170, 34, 170, 0.877), pink);;
+    background: linear-gradient(rgba(170, 34, 170, 0.877), pink);
+    background-repeat: no-repeat;
+    background-size: 10000px 1000px;
     color: #000000;
     font-family: script;
     font-size: 12px;
-    margin: 0;
-    padding: 0;
     text-align: center;
     text-transform: uppercase;
     font-family: script;
     margin-top: 190px;
 }
-.pseudo{
-    margin-top: 50px;
-    margin-left: 20%;
-    border: 1px solid #262827;
+.pseudo input{
     border-radius: 5px;
-    width: 200px;
+    width: 100px;
+    height: 20px;
+    font-family: script;
+    font-size: 15px;
+    background: linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);
+}
+.bouton input{
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    font-family: script;
+    font-size: 20px;
+    background: linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);
+}
+.bouton input:hover {
+    background: magenta;
+    color: lightpink;
+}
+.bouton{
+    text-align: center;
+    transition-duration: 0.4s;
 }
